<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerColor"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="38dp"
            android:layout_height="32dp"
            android:layout_weight="0.08"
            android:text="@string/back"
            android:textSize="7dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista_de_compras"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/borrar"
            android:textSize="10dp" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridProds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/producto" />

    <MultiAutoCompleteTextView
        android:id="@+id/comTxbProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/txtMarc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca" />

    <MultiAutoCompleteTextView
        android:id="@+id/comTxbMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/txtCant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/numbTxbCant"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/ver_compra" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_pedido" />

</LinearLayout>