<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="melamed.soldeloesteapp.LoginActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progressbar"
        android:padding="16dp">

        <ImageView
            android:id="@+id/dummyImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription=""
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-102dp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dummyLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dummyImg">

            <EditText
                android:id="@+id/txbUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dummyLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dummyLayout1">

            <EditText
                android:id="@+id/txbPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textNoSuggestions|textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dummyLayout2"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:text="@string/button"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</RelativeLayout>
