<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="melamed.soldeloesteapp.MainActivity">


        <ImageView
            android:id="@+id/sapcer1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:srcCompat="@android:color/holo_green_dark" />

        <ImageView
            android:layout_below="@+id/sapcer1"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription=""
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-102dp" />

        <ImageView
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/imageView"
            app:srcCompat="@android:color/holo_green_dark" />

        <Space
            android:layout_below="@+id/spacer2"
            android:id="@+id/spacer3"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacer3"
            android:text="@string/usuario"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:layout_below="@+id/textView2"
            android:id="@+id/txbUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbUser"
            android:text="@string/contrase_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:layout_below="@+id/textView3"
            android:id="@+id/txbPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />

        <Button
            android:layout_below="@+id/txbPass"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:text="@string/button"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />
</RelativeLayout>
