<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/coordinator"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:theme="@style/AppThemeNoBar"
                                                 tools:context="melamed.soldeloesteapp.ClientesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/tb_clientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/toolbar_clientes"
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:background="?attr/colorPrimary"
               android:minHeight="?attr/actionBarSize"
               android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
               app:layout_scrollFlags="scroll|enterAlways"
               app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
               app:title="Carrito">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tb_clientes"
            android:gravity="center_vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:clipToPadding="false"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/dummyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/emptycart"
                android:textAlignment="center"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/btnComprar"
            android:text="@string/confirmar_pedido"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/priceLayout"
            android:gravity="center_vertical|start"
            android:layout_toStartOf="@id/btnComprar"
            android:layout_alignTop="@id/btnComprar"
            android:padding="16dp"
            android:background="#BBBBBB"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/subtotal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSubtotal"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="20sp"/>

        </RelativeLayout>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
